--- a/style.css
+++ b/style.css
@@ -1,8 +1,66 @@
 body {
     margin: 0;
     font-family:  Arial, Helvetica, sans-serif;
-    background-color: #2575fc;
+    background-color: #758db6;
     color: white;
     text-align: center;;
 
+}
+.container {
+    max-width: 600px;
+    margin:  40px auto;
+    background: #fff;
+    color: #333;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0, 10px 25px rgb(0, 0, 0, 0.2);
+}
+
+h1 {
+    margin-top: 0;
+}
+
+.input-section {
+    display:flex ;
+    gap: 10px;
+    margin-bottom: 20px;
+
+
+}
+
+.input-section input {
+    flex: 1;
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid #cc0;
+}
+
+.input-section button {
+    background-color:rgb(3, 141, 3);
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.stats {
+    display: flex;
+    justify-content: space-between;
+    margin:  20px 0;
+
+}
+.stats div {
+    background-color: #f1f1f1;
+    border-radius: 10px;
+    padding: 10px;
+    flex: 1;
+    margin: 0, 5px;
+}
+.filters button {
+    background-color: #eee;
+    border: none;
+    padding:8px 15px;
+    margin: 5px;
+    border-radius: 20px;
+    cursor: pointer;
 }
