--- a/style.css
+++ b/style.css
@@ -64,3 +64,17 @@ h1 {
     border-radius: 20px;
     cursor: pointer;
 }
+ul#task-list {
+    list-style: none;
+    padding: 0;
+}
+ul#task-list li {
+    background: #f9f9f9;
+    margin: 10px 0;
+    padding: 12px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
