--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   margin: 40px auto;
   background: #fff;
   border-radius: 12px;
-  padding: 20px;
+  padding:  20px 100px;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
 }
 
@@ -45,6 +45,11 @@ h1 {
   border-radius: 6px;
   cursor: pointer;
 }
+.filters button.active {
+  background-color: #4c6ef5;
+  color: white;
+}
+
 
 .stats {
   display: flex;
